# floresce-py

./: pyproject.toml
floresce_py/: main.py
